<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@drawable/back_of_school">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="350dp"
        android:layout_centerHorizontal="true"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:id="@+id/school_logo_id"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_TextInputLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/school_logo_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/email_TextField"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:drawableLeft="@drawable/account"
            android:drawablePadding="4dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_TextInputEditText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_TextInputLayout"
        android:layout_centerHorizontal="true"
        app:passwordToggleEnabled="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password_TextField"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="4dp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_TextInputEditText"
        android:id="@+id/remember_checkbox"
        android:layout_marginLeft="26dp"
        android:text="@string/remember_me"/>



    <android.support.v7.widget.AppCompatButton
        android:id="@+id/log_btn"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/remember_checkbox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/btn_name"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:background="@drawable/roundedbutton"
        android:textColor="@color/raisedButtonText"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/forget_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/log_btn"
        android:layout_marginTop="8dp"
        android:text="@string/forget"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary" />


    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forget_textView"
        android:layout_marginTop="35dp"
        android:id="@+id/or_textView"
        android:text="@string/or"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="18sp"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/signUp_btn"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/or_textView"
        android:layout_marginTop="30dp"
        android:text="@string/signUp"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:background="@drawable/roundedbutton"
        android:textColor="@color/raisedButtonText" />
</RelativeLayout>